# AgenticLeague

./: .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
alembic/versions/: a3f1d2e4b567_add_activity_logs_table.py  c729c390524d_change_draft_order_to_text.py  c89ae73b9b27_initial_schema.py
app/: config.py  database.py  main.py
app/api/: activity.py  agents.py  deps.py  drafts.py  jobs.py  leaderboard.py  leagues.py  nba.py  users.py  waivers.py
app/middleware/: error_handler.py  rate_limit.py  request_id.py
app/models/: __init__.py  activity_log.py  agent.py  base.py  draft.py  job_run.py  league.py  matchup.py  player.py  team.py  user.py  waiver.py
app/schemas/: agents.py  drafts.py  leagues.py  players.py  users.py  waivers.py
app/services/: activity.py  auth.py  cache.py  draft.py  leaderboard.py  matchups.py  scoring.py  waivers.py
app/sports/: base.py
app/sports/nba/: __init__.py  adapter.py  rules.py  schedule.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/: api.md  heartbeat.md  rules.md  skill.json  skill.md
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AsciiBackground.jsx  Counter.jsx  Hero.jsx  LiveIndicator.jsx  Navbar.jsx  Skeleton.jsx
frontend/src/hooks/: usePolling.js
frontend/src/pages/: AgentsPage.jsx  Dashboard.jsx  DocsPage.jsx  LandingPage.jsx  Leaderboard.jsx  LeaguePage.jsx  Login.jsx  (+1 more)
scripts/: seed_players.py
tests/: conftest.py  test_api.py  test_auth.py  test_rules.py  test_schedule.py  test_scoring.py
